--- a/site.yml
+++ b/site.yml
@@ -2,8 +2,9 @@
   hosts: fe #host_locale 
   connection: local
   roles:
-    - Esercizio1/roles/fe 
-    - Esercizio1/roles/be  
+    - ../Esercizio1/roles/fe 
+    - ../Esercizio1/roles/be  
+    - ../Esercizio2/roles/webserver
   vars:
       nome: "xxxxxxxxxxx"  #vars per l'esempio template 
   tasks:
@@ -24,7 +25,14 @@
         dest: /tmp/benvenuto.txt    #genera il file con il conteuto del template 
 
 
+    - name: group1.yml in ese2
+      include_vars:
+        file: Esercizio2/gruop_vars/group1.yml
 
+    - name: stampa valore variabile in ese2
+      debug:
+        var: group_var1
+      tags: ese2
 
 ################
 # - name: Setup BE
