--- a/Esercizio3/roles/docker_install/defaults/main.yml
+++ b/Esercizio3/roles/docker_install/defaults/main.yml
@@ -1,3 +1,6 @@
 ---
 # defaults file for docker_install
-  ubuntu_version: "{{ ansible_distribution_version }}"
+docker_version: latest
+docker_service: docker
+docker_package: docker-ce
+docker_action: "install"
