--- a/Esercizio3/inventory.ini
+++ b/Esercizio3/inventory.ini
@@ -1,11 +1,12 @@
 [fe]
 fe1 ansible_host=192.168.1.10  
 
-; 192.168.171.128 
+[VMware]
+vm1 ansible_host=192.168.171.128   ansible_user=francesco ansible_password=francesco
 
-[be]
-be1 ansible_host=192.168.1.20
-be2 ansible_host=192.168.1.21
+; [be]
+; be1 ansible_host=192.168.1.20
+; be2 ansible_host=192.168.1.21
 
 [host_locale]
 localhost
