--- a/Esercizio3/site.yml
+++ b/Esercizio3/site.yml
@@ -1,16 +1,13 @@
 - name: Installazione docker
-  hosts: fe
-  connection: local
+  hosts: vm1
+  #connection: local
   become: true
+  become_method: sudo
   become_user: root
   gather_facts: true
-  tasks:
-    
+  tasks:      
     - name: includi role per installazione di docker
       include_role: 
         name: docker_install
-       # docker_version: "24.0.6"
-    # - name: restart docker service   handlress
-    #   notify: restart docker
-
-
+    # docker_version: "24.0.6"
+   
