--- a/Esercizio3/inventory.ini
+++ b/Esercizio3/inventory.ini
@@ -1,9 +1,9 @@
-[fe]
-fe1 ansible_host=192.168.1.10  
 
 [VMware]
-vm1 ansible_host=192.168.171.128   ansible_user=francesco ansible_password=francesco
-
+vm1 ansible_host=192.168.171.128   ansible_user=francesco ansible_password=francesco 
+ # esempio versione specificata per sistemi RH: docker_packages_install=docker-ce-24.0.6,docker-ce-cli-24.0.6/ Ubuntu-->docker-ce-cli=5:24.0.6-1~ubuntu.22.04~jammy,docker-ce=5:24.0.6-1~ubuntu.22.04~jammy
+; [fe]
+; fe1 ansible_host=192.168.1.10  
 ; [be]
 ; be1 ansible_host=192.168.1.20
 ; be2 ansible_host=192.168.1.21
