--- a/Esercizio4/inventory.ini
+++ b/Esercizio4/inventory.ini
@@ -1,6 +1,6 @@
 
-; [VMware]
-; vm1 ansible_host=192.168.171.128   ansible_user=francesco ansible_password=francesco 
+[VMware]
+vm1 ansible_host=192.168.171.128   ansible_user=francesco ansible_password=francesco 
 
 [host_locale]
 localhost
